fikset overlap bug ved bruk av responsiv dropdown menu

--- a/ShadyGarage/static/css/style.css
+++ b/ShadyGarage/static/css/style.css
@@ -259,12 +259,6 @@ h1,h2,h3,h4,h5,h6{
 }
 
 /*
----------------------------------------------------------------
-BackGround Images
-*/
-
-
-/*
 -----------------------------------------------------------------
   Meets app
 */
@@ -293,7 +287,6 @@ BackGround Images
   background-repeat: no-repeat;
   background-position: 25% 90%;
   background-size: 160% 100%;
-  background-color: red;
   height: 600px;
   width: 28%;
   margin: 20px 20px;
@@ -399,6 +392,7 @@ BackGround Images
 
 }
 /*--------------------------------------*/
+
 .meet_detail_body{
   padding: 30px;
   background-color: var(--main-light-color);
@@ -800,6 +794,8 @@ BackGround Images
 }
 
 
+
+
 @media only screen and (max-width: 480px){
 
   .profile-top{
@@ -1009,9 +1005,13 @@ BackGround Images
     width: 93.3px;
 }
 
-.signup-container{
+.form-container{
   display: flex;
   padding: 30px 0 30px 30px;
+}
+
+.form-container form{
+  z-index: -100;
 }
 
 .signup-form-container{
@@ -1039,20 +1039,10 @@ BackGround Images
 
 .signupdel2-form-container{
   color: white;
-
-}
-
-input[type="file"]{
-  margin-top: 5px;
-  position: relative;
-  left: 15px;
-  color: #72BCD4;
-  vertical-align: middle;
-  cursor: pointer;
 }
 
 @media only screen and (max-width: 480px){
-  .signup-container{
+  .form-container{
     padding: 15px;
     justify-content: center;
   }
@@ -1062,6 +1052,9 @@ input[type="file"]{
     padding: 30px;
     width: 90%;
   }
+}
+
+input[type=file]{
 }
 
 /* Select date widget in "shadygarage.com/meets/new/"*/
